# r-pixel

./: .gitignore  LICENSE.md  README.md  setup.cfg  test_database.csv
r-pixel/: Dockerfile  docker-compose.yml
r-pixel/app/static/: script.js
r-pixel/app/template/: index.html
r-pixel/backend/: Dockerfile  requirements.txt  server.py
r-pixel/data/: database.csv
r-pixel/nginx/: nginx.conf
r-pixel/nginx/website/: index.html  script.js  style.css
r-pixel/src/: requirements.txt  server.py
r-pixel/tests/: my_database.csv  test_csv_functionality.py  test_ws_functionality.py
src/: main.py
