[metadata]
name = r-pixel
author = David Torbics
author_email = torbic190220@sr.htlweiz.at
description = "A copy of r/place"
version = 1.0.0
url = https://github.com/DavidTorbics20/r-pixel.git
keywords = logging
        pytest
        file
        websocket
        asyncio


license_files =
        LICENSE.md

# da kommt rul_test her
[options.entry_points]
console_scripts = 
        rul_test = rul.main:main # modul_wo_das_zu_finden_ist:funktion_im_modul

[options]
python_requires >= 3.8
package_dir =
        =src
packages = find:
zip_safe = False
install_requires =
        websocket
        asyncio

[options.extras_require]
dev = 
  black
  pytest
  rope
  flake8
  flake8-eradicate
  flake8-isort
  flake8-spellcheck
  flake8-variables-names
  flake8-builtins
  ipython

[flake8]
max-line-length=88
exclude = venv
docstring-convention = numpy
dictionaries = en_US,python,technical

[isort]
profile = black

[tool:pytest]
testpaths = tests
log_level = info
